Prevent whitespace "bar" at top of sticky topnav

--- a/sass/site2.scss
+++ b/sass/site2.scss
@@ -325,7 +325,7 @@ polymer-ui-toolbar {
 
 .sticky {
   position: fixed !important;
-  // top: 0;
+  top: 0;
   // left: 0;
   width: 100%;
 }
